Import of WHITCODE/Games-SGF-0.02 from CPAN.
gitpan-cpan-distribution: Games-SGF
gitpan-cpan-version:      0.02
gitpan-cpan-path:         WHITCODE/Games-SGF-0.02.tar.gz
gitpan-cpan-author:       WHITCODE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Games-SGF
 
-0.01    Date/time
+0.01    3/18/2008
         First version, released on an unsuspecting world.
 
+0.02    3/19/2008
+        Added t/copy.t and fixed some bugs which it exposed
+        Removed t/boilerplate.t
+        Added t/addon.t and fixed some bugs which it exposed
