Import of WHITCODE/Games-SGF-0.04 from CPAN.
gitpan-cpan-distribution: Games-SGF
gitpan-cpan-version:      0.04
gitpan-cpan-path:         WHITCODE/Games-SGF-0.04.tar.gz
gitpan-cpan-author:       WHITCODE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -28,3 +28,11 @@ Revision history for Games-SGF
 
         3/22/2008
         Added Pass move handling to Go.pm
+
+0.04
+        3/27/2008
+        Changed enum requirement 1.016
+        Rewrote test scripts in order to deep test structures better
+        Added t/text.t for testing SIMPLE_TEXT and TEXT types
+        Fixed SIMPLE_TEXT and TEXT type handling
+        Fixed sgf_test.pl undef warnings
