Import of WHITCODE/Games-SGF-0.99 from CPAN.
gitpan-cpan-distribution: Games-SGF
gitpan-cpan-version:      0.99
gitpan-cpan-path:         WHITCODE/Games-SGF-0.99.tar.gz
gitpan-cpan-author:       WHITCODE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -81,3 +81,14 @@ Revision history for Games-SGF
         Updated Debuging API
         Fixed AW[aa]AW[bb] Handling
         Fixed some other buggs as noticed
+
+0.08
+        07/30/08
+        Added redefineTag to Games::SGF
+        Allowed Games::SGF::Go to make stone 
+            types into point types using redefineTag.
+        Modified _getTag* to check $ff_properties first
+        Fixed and Added tests to:
+            t/addon.t
+            t/go-game.t
+            t/sgf_prop.t
