Import of WHITCODE/Games-SGF-0.992 from CPAN.
gitpan-cpan-distribution: Games-SGF
gitpan-cpan-version:      0.992
gitpan-cpan-path:         WHITCODE/Games-SGF-0.992.tar.gz
gitpan-cpan-author:       WHITCODE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -105,3 +105,9 @@ Revision history for Games-SGF
       Clean module, setting permissions, and removing uneeded files
       Added $sgf->empty and $sgf->isEmpty, and incorperated them into the core 
       Made sure _clear comes before the Debug statements
+
+0.992
+      10/11/09
+      Changed some documentation in Games::SGF::Util
+      SGF.pm now checks for invalid tags need to pass /^[a-zA-Z]+$/
+      restructuring navigation, and tree manipulation code
