Import of WHITCODE/Games-SGF-0.993 from CPAN.
gitpan-cpan-distribution: Games-SGF
gitpan-cpan-version:      0.993
gitpan-cpan-path:         WHITCODE/Games-SGF-0.993.tar.gz
gitpan-cpan-author:       WHITCODE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -111,3 +111,8 @@ Revision history for Games-SGF
       Changed some documentation in Games::SGF::Util
       SGF.pm now checks for invalid tags need to pass /^[a-zA-Z]+$/
       restructuring navigation, and tree manipulation code
+
+0.993
+      04/28/10
+      Games::SGF::Util touch method fixed for deep recursion
+      Remove clone feature, deep recursion problem
